pkgmain_tests/invalid_bpkg/test8_invalid_chunk.bpkg
ident:0987654321FEDCBA0987654321FEDCBA0987654321FEDCBA0987654321FEDCBA
filename:invalid_chunk_format.bpkg
size:8192
nhashes:1
hashes:
    abcd1234abcd1234abcd1234abcd1234abcd1234abcd1234abcd1234abcd1234
nchunks:2
chunks:
    abcd1234,0,4096
    abcd1234,4096,4096